[package]
name = "pam-u2f-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
egui_extras = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
pam-u2f-mapping = { path = "../pam-u2f-mapping" }
