[package]
name = "pam-u2f-mapping"
description = "pam-u2f mapping file parser and formatter"
authors = ["Amanda Graven <amanda@graven.dev>"]
readme = "README.md"
homepage = "https://github.com/agraven/pam-u2f-rs"
repository = "https://github.com/agraven/pam-u2f-rs"
categories = ["authentication", "config", "parsing"]
keywords = ["yubikey", "pam", "u2f"]
license = "MPL-2.0"
version = "0.2.0"
edition = "2021"


[dependencies]
